test/bad/it_tapp.iml
(* -*- tuareg -*- *)

type unit = Unit 
;;

let id = Lam 'a. fun (x : 'a) -> x in
let f = id id in 
Unit
